# MiniArDrone

./: README.md
miniardrone_ws/: miniardrone.workspace
miniardrone_ws/devel/: .catkin  .rosinstall  setup.sh
miniardrone_ws/devel/arsdk/.repo/: .repo_fetchtimes.json  project.list
miniardrone_ws/devel/arsdk/.repo/manifests.git/: .repo_config.json  FETCH_HEAD  config  packed-refs
miniardrone_ws/devel/arsdk/.repo/manifests.git/logs/: HEAD
miniardrone_ws/devel/arsdk/.repo/manifests.git/logs/refs/remotes/origin/: master
miniardrone_ws/devel/arsdk/.repo/manifests.git/refs/heads/: default
miniardrone_ws/devel/arsdk/.repo/project-objects/ARSDKTools.git/objects/pack/: pack-b12187fdcd70d51b779b5fd72040049c58839838.idx
miniardrone_ws/devel/arsdk/.repo/project-objects/Samples.git/objects/pack/: pack-40beb6b8236e973a6b18fbb116a9c72737111b82.idx  pack-40beb6b8236e973a6b18fbb116a9c72737111b82.pack
miniardrone_ws/devel/arsdk/.repo/project-objects/libARCommands.git/objects/pack/: pack-826d501f368d537b74e1f4c9e3a3b26f7bc81249.idx  pack-826d501f368d537b74e1f4c9e3a3b26f7bc81249.pack
miniardrone_ws/devel/arsdk/.repo/project-objects/libARController.git/objects/pack/: pack-6be625616bafe1d6d23cf071d6942df5d96e6de7.idx  pack-6be625616bafe1d6d23cf071d6942df5d96e6de7.pack
miniardrone_ws/devel/arsdk/.repo/project-objects/libARSAL.git/objects/pack/: pack-c7e5ee2ed00a5f875a2afbe9020b309e4c0bf1bb.idx  pack-c7e5ee2ed00a5f875a2afbe9020b309e4c0bf1bb.pack
miniardrone_ws/devel/arsdk/.repo/projects/products/arsdk.git/logs/refs/remotes/github/: master
miniardrone_ws/devel/bluez/: make_bluez
miniardrone_ws/devel/bluez/lib/: libbluetooth.so.3.18.14
miniardrone_ws/devel/bluez/lib/cups/backend/: bluetooth
miniardrone_ws/devel/bluez/lib/systemd/user/: obex.service
miniardrone_ws/devel/lib/miniardrone_pkg/: main
miniardrone_ws/devel/lib/pkgconfig/: miniardrone_pkg.pc
miniardrone_ws/devel/share/miniardrone_pkg/cmake/: miniardrone_pkgConfig.cmake
miniardrone_ws/src/miniardrone_pkg/: CMakeLists.txt  package.xml
miniardrone_ws/src/miniardrone_pkg/src/: main.cpp
